# alphavec

./: LICENSE  README.md  alphavec.ipynb  backtest.py  example.ipynb  marketdata.py  requirements.txt  setup.cfg
alphavec/: backtest.py
tests/: test_backtest.py
tests/testdata/: binance-margin-1d.csv
